--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ numpy==2.0.2
 openai==1.98.0
 orjson==3.11.1
 packaging==25.0
+pandas==2.3.1
 proto-plus==1.26.1
 protobuf==5.29.5
 pyasn1==0.6.1
@@ -33,20 +34,27 @@ pyasn1_modules==0.4.2
 pydantic==2.11.7
 pydantic_core==2.33.2
 pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+pytz==2025.2
 PyYAML==6.0.2
 regex==2025.7.34
+requests==2.32.4
+requests-toolbelt==1.0.0
 rsa==4.9.1
 safetensors==0.5.3
 scikit-learn==1.6.1
 scipy==1.13.1
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.42
 starlette==0.47.2
 tenacity==9.1.2
 threadpoolctl==3.6.0
 tiktoken==0.9.0
+tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.14.1
+tzdata==2025.2
 uritemplate==4.2.0
 urllib3==2.5.0
 uvicorn==0.35.0
